Links and Keywords updated for commerce arts and college html pages

--- a/index.html
+++ b/index.html
@@ -9,116 +9,7 @@
   <title>EDUPROV Admission Guidance, Career Counselling | EDUPROV</title>
   <meta name="description" content="  HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
   GUIDANCE AND TRAVEL THE WORLD WITH THE BEST UNIVERSITIES" />
-  <meta name="keywords" content="abroad admission consultants, abroad education consultants, 
-    academic career coach, academic consultant in bangalore, admission, admission assistance ,
-     admission consultancy in bangalore, admission consultant, admission consultant in bangalore, 
-     admission consultant near me, admission guidance, admission guidance in bangalore, admission 
-     through management quota, admission through nri quota, bangalore university, best admission 
-     consultant in bangalore, best career guidance, best college admission consultant in bangalore, 
-     best colleges in bangalore, best education consultancy in bangalore, career counselling , 
-     career guidance, college, college admission, college admission assistance, 
-     college admission consultant in bangalore, college admission counselore near me,
-      college admission guidance, college admission in bangalore, college admission information,
-       college admission process, college admissions advice, college admissions consultant, 
-       college admissions counselor, college advisor, college consultant, college counselor,
-        college planning consultant, colleges in bangalore, direct admission, direct admission consultants, 
-        education, education admission guidance, education counsellor, educational consultants in bangalore,
-         educational guidance, foreign studies consultants, genuine admission consultant,
-          international admissions, international education consultancy, international student admission,
-           international university admission, mba admission assistance, nursing admission, 
-           overseas education consultant, overseas education consultants,
-            overseas education consultants near me, para-medical colleges in bangalore, puc admission, 
-            school admission, school admission assistance, student consultants, study abroad consultant, 
-            study abroad consultants in bangalore, university admission,mba admission 2021,
-            mba degree,
-            mba in madras university,
-            mba symbiosis,
-            thermal engineering,
-            best colleges through jee mains,
-            davv mba admission 2020,
-            iit jam 2021 iisc bangalore,
-            imba course,
-            imd mba,
-            mba engineering,
-            mba in,
-            mba in england,
-            mba management,
-            private engineering college,
-            pune business school,
-            quantnet,
-            ramaiah college bangalore bba,
-            renewable energy engineering,
-            said business school mba,
-            university law college bangalore admission 2020,
-            university of agricultural sciences bangalore admission 2020,
-            ux engineer,
-            vits college,
-            warwick business school mba,
-            weekend mba,
-            whu mba,
-            world's best medical college for mbbs,
-            amrita university bangalore admission 2021,
-            bangalore nlu fees,
-            bsc nursing bangalore fees,
-            christ college bangalore mba admission,
-            good art colleges,
-            harvard mba admissions,
-            harvard mba program,
-            harvard ms mba,
-            hbs admissions,
-            healthcare mba programs,
-            hec business school,
-            hec executive mba,
-            hec paris executive mba,
-            hindustan aviation academy bangalore admission 2020,
-            hku mba,
-            howard mba,
-            howard university mba,
-            hsw mba,
-            hult international business school cost,
-            iba bangalore fees,
-            iba bangalore mba fees,
-            iba mba,
-            iba mba admission,
-            ibab bangalore admission 2020,
-            ibab bangalore fees,
-            ibs bangalore fees for mba,
-            icfai bangalore mba fees,
-            ifim bangalore bba,
-            iiit bangalore btech fees,
-            iim bangalore 2021 admission,
-            iisc bangalore pg,
-            indian institute of science bangalore fees,
-            jain college bangalore bba fees,
-            jain pu college bangalore admissions,
-            jam 2021 iisc bangalore,
-            mba correspondence in bangalore fees,
-            mba digital business,
-            mba fees in presidency university bangalore,
-            mba hsg,
-            mba iese,
-            mba leadership development programs,
-            mba presidency college bangalore,
-            my personal mba,
-            nmims bangalore course admissions,
-            phd fees in bangalore,
-            poets & quants,
-            presidency college bangalore bba,
-            presidency college bangalore bca fees,
-            presidency university bangalore admission,
-            ramaiah bangalore mba,
-            symbiosis institute of business management bengaluru course admissions,
-            tcl college,
-            top 50 mba programs,
-            top 600 universities in the world,
-            top design colleges,
-            top fashion colleges,
-            top international business schools,
-            top mba colleges in bangalore without cat,
-            top pharmacy schools in the world,
-            ulc bangalore admission 2020,
-            university of melbourne business school,           
-            " />
+  <meta name="keywords" content="study abroad,career counselling,career guidance,study abroad consultants,career consultant,mbbs abroad,career counselor near me,overseas education consultants,career counselling online,best countries to study abroad,overseas education,abroad education consultants,study mbbs abroad,career counselling for students,best countries to study,abroad consultancy,scholarships for indian students to study abroad,abroad countries,best countries for mbbs,admission guidance,apply abroad,study overseas,education abroad,career guidance for students,i want to study abroad for free,mbbs in abroad for indian students at low cost,mbbs abroad consultants,best countries for international students,foreign study,study abroad for indian students,abroad education,career guidance counselor,online career guidance,scholarships abroad,study abroad agency,career counselling services,career guidance and counselling,counselling career,foreign education consultants,career counselling websites,i want to study abroad,school abroad,scholarships for indian students to study abroad after 12th,study abroad counselling,career counsellors near me,study abroad after 12th,mbbs in foreign countries,abroad places,mbbs abroad for indian students,indian students abroad,career guidance near me,courses abroad,mba abroad at low cost,career guidance services,career counselling after 12th,education overseas,mbbs consultancy,career counselling after 10th,mbbs admission abroad,best overseas education consultants,study overseas consultants,engineering abroad,courses to study abroad,scholarships for mba abroad,scholarships for indian students to study abroad after 10th,study abroad after 12th science,study abroad after 10th,online career counselling for working professionals,best countries for students,mbbs in foreign,best career counsellor,abroad mbbs admission,study abroad after 12th commerce,best countries for indian students,best career counselling online,best study abroad consultants,career counselling for experienced professionals,educational counsellor near me,study mbbs abroad consultants,going abroad for studies,international scholarships for indian students after 12th,career counselling for professionals,foreign study consultancy,abroad courses after 12th,best education consultants,careers in counselling psychology,study abroad education consultants,abroad admission consultants,medical study abroad,m tech in abroad,abroad scholarships for indian students,career guidance consultant,career counselling centres,study abroad organizations,abroad experience,study abroad 2021,abroad programs,medical school abroad,international study abroad,outplacement counselling,find a career counselor,graduate school abroad,science abroad,education and career guidance,career guidance and counselling for students,institute for study abroad,scholarships for engineering students to study abroad,best abroad,affordable countries to study,study abroad 2020,study language abroad,professional career guidance,counselor career path,postgraduate study abroad,study abroad after graduation from india,education career guidance,courses after bca in abroad,best career guidance,scholarships for ghanaian students to study abroad,study abroad after 12th medical,courses to study abroad after 12th commerce,scholarships for indian students to study abroad after 12th commerce,career counselling after graduation,counselling for students after 12th,mbbs in other countries,best consultancy for mbbs abroad,architecture abroad for indian students,education abroad program,top countries for mbbs,medical school overseas,abroad for study,executive study abroad,overseas medical education consultants,best online career counselling,civil engineering study abroad,medical study abroad programs,i need a career counselor,best career counselor near me,best abroad education consultants,counselling after 12th,short courses abroad,medical study abroad for indian students,best career counsellor near me,top places to study abroad,i want to go to abroad,i need career guidance,med school abroad,international study abroad programs,medical scholarships abroad,abroad scholarships 2020,civil engineering abroad,career counselling for teachers,overseas education services,best places to study abroad for business,mba in international marketing abroad,apply for scholarships abroad,study abroad after 12th arts,study abroad medical school,career guidance counsellor near me,need of career counselling,online career counselling after 12th,scholarships for indian students to study abroad for masters,foreign courses after 12th,fie study abroad,school overseas,study abroad after 10th class,mbbs education consultants,expert overseas education consultants,school abroad programs,mbbs admission guidance,ai based career counselling,courses after bhms in abroad,2021 study abroad,mba career counselling,need of career guidance,after mbbs abroad,introduction to career counselling & coaching,career guidance for students after 12th,study overseas after spm,career counselling for medical students,neet counselling guidance,a career counselor,career and guidance,career guidance for working professionals,career guidance and development,medical career counselling,counselor near me for career,career guidance advice,online career counselling after 10th,talk to a career counselor,career change counselling,career and guidance counselling,career development counselor,educational counselor near me,career counselling for graduates,find a career counselor near me,guidance counselor careers,career counselling business,career counselor education,career guidance and career counselling,educational and vocational guidance counsellor,international career counselor,career guidance for 10th students,career counselling for students after 12th,career guidance for students after 10th,counselling career options,career counselling centres near me,career counselling sites,career counselling for students after 10th,need career guidance,counselling for 12th students,career advice counselling,career counselling for engineering students,best career counsellor online,career counselling for commerce students,career counselling assessment,career in career counselling,need career counselling,best online career counselling sites,career guidance assessments,career counselling and guidance in the workplace,career counselling in,counselling for career planning,top career consultant,i need a career advisor,career counselling usa,career development and counselling,online career counselling after graduation,best career consultant,career counselor for engineering,mba counsellor near me,career guidance for 12th students,top career counselling companies in the world,education career counselling,career planning in counselling psychology,talk to a career counselor online,neet ug counselling guidance,good career counselor,career planning guidance,career guidance coach,career counselling for fashion designing,career counselling for housewives,career counselling for science students,top career counsellors,career counselling for 12th students,introduction to career counselling,best free online career counselling,counselling for 10th std students,career counselling services near me," />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="EDUPROV  - Explore Top Colleges, Courses, Fees and Exams" />
   <meta property="og:url" content="" />
@@ -137,11 +28,11 @@
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="service.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
  
@@ -267,7 +158,7 @@
                    <div class="card">
                       <div class="card-body">
                          <i class="fa fa-book"></i>
-                         <a href="/courses.html" style="text-decoration: none;"><h5 class="card-title text-dark" > Courses</h5></a>
+                         <a href="https://eduprov.com/courses.html" style="text-decoration: none;"><h5 class="card-title text-dark" > Courses</h5></a>
                          <p class="card-text">information on courses and eligibility with career scope is mentioned.</p>
                       </div>
                    </div>
