--- a/arts-humanities.html
+++ b/arts-humanities.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href="" />
+  <link rel="canonical" href="https://eduprov.com/arts-humanities.html" />
   <title>Arts and Humanities Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Specializations and courses in the arts and humanities including fine arts, history, and philosophy
   " />
-   <meta name="keywords" content="
+   <meta name="keywords" content="bachelor of arts,ma communication,humanities course,arts course,bachelor of fine arts,humanities and social sciences,ba economics,ba english,ba honours,arts and science courses,diploma in graphic design,diploma in fine arts,ba in english literature,humanities studies,courses after 12th humanities,ba in philosophy,ma in arts,bachelor of arts degree,master of teaching,bachelor of arts in psychology,bachelor of arts in english,ba communication,bachelor of arts courses,bachelor of arts in economics,ba bachelor of arts,bachelor of arts honours,humanities courses list,ba general,bachelor of performing arts,bachelor of graphic design,bachelor of liberal arts,ba humanities,ba fine arts,arts stream courses,bachelor of arts in sociology,bachelor of fine arts degree,courses for arts students,ba liberal arts,ba graphic design,humanities and social science studies,diploma in arts,best graphic design colleges,degree in arts,bachelor of english literature,ba hons humanities and social sciences,diploma in art and craft,ma fine art,bachelor of fine arts colleges,arts and humanities subjects,humanities social sciences,ba in literature,computer art design,best courses for arts students,best art courses,ba in animation and graphic design,ma arts,humanities degree courses,best courses after 12th humanities,diploma in commercial art,bachelor of fine arts courses,ba in humanities & social sciences,courses for humanities students,humanities class 11,ba humanities and social science,ba performing arts,after humanities courses,arts and science courses in anna university,humanities courses after 10th,after plus two humanities courses,bsc in culinary arts,courses after humanities,commercial art course,best du colleges for ba,ba arts courses,diploma courses for arts students,arts computer science,best course for humanities students,arts and science college courses,bachelor of arts honours in psychology,12 arts course,diploma in hr after 12th,best college for hr mba,arts and humanities course,humanities classes,bachelor of arts in communication,bachelor of arts and science,communication arts course,bachelor of arts majors,bachelor of arts in english language studies,bachelor of humanities,bachelor of arts business administration,bachelor of education arts,bachelor of arts science,bachelor of arts in philosophy,bachelor of multimedia arts,arts and social sciences,bachelor of arts in journalism,ma art,bachelor of arts in business,humanities and social sciences courses,character art school,ba communication arts,art class 2,bachelor of arts in computer science,bachelor of liberal arts and science,bachelor of arts in international relations,bachelor of literature,bachelor of arts in music,bachelor of arts in mass communication,bachelor of media,education and humanity class 11,bachelor of arts in public relations,bachelor of arts in international studies,arts and humanities classes,bachelor of arts in english language,courses under humanities,courses for general arts students at the university,college of arts and sciences courses,bachelor of arts in development studies,bachelor of culture and arts education,bachelor of applied arts,media arts and design,bachelor of arts in communication science,media arts course,arts business management,beginner art classes,college art classes,bachelor of arts bachelor of science,bachelor of arts in public administration,bachelor of arts law,arts courses in college,arts management courses,bachelor of arts in humanities,bachelor of arts in,advanced graphic design,art class comic,ma in communication,bachelor of arts in architecture,bachelor of arts in multimedia arts,diploma in performing arts,bachelor of arts in applied psychology,bachelor of arts in mathematics,ba hons graphic design,humanities courses in college,arts and humanities subjects list,bachelor of arts in graphic design,bachelor of arts in business communication,best art courses in the world,bachelor of arts in geography,bachelor of arts in management,bachelor of arts in english literature,bachelor of arts in business management,diploma in art and design,ba english studies,bachelor of arts in anthropology,bachelor of arts in fashion design,bachelor of arts major in philosophy,bachelor of fine arts in photography,bachelor of media arts,bachelor of arts in photography,bachelor of arts pathway to teaching primary,bachelor of science in culinary arts,fashion art design,courses available for arts students,bachelor of arts latrobe,bachelor of arts in physics,list of arts and humanities courses,advanced graphic design course,ba media studies,bachelor of arts in marketing,ba in public relations,bachelor of arts major in psychology,bachelor of arts in finance,art class courses,arts administration courses,bachelor of arts uc,bachelor of arts acu,bachelor of arts and communication,ba multimedia arts,bachelor of theatre arts,bachelor of arts in creative writing,bachelor of arts curtin,bachelor of arts swinburne,after plus two humanities,ba in animation & multimedia,bachelor of arts in nursing science,bachelor of arts degree in psychology,bachelor's degree in art and design,bachelor of arts in chemistry,bachelor of arts and business,advanced higher art,fashion art and design,arts courses in puc,ba hons fine art,ma arts management,diploma in fine arts from ignou,bachelor of arts in film,best humanities courses,diploma courses after 12th humanities,bachelor of arts and bachelor of science,ma in art,bachelor of fine arts distance education,ma in humanities,ba in hr,bachelor in multimedia arts,humanities and social sciences majors,bachelor of arts accounting,bca college for arts students,best art classes near me,after plus two humanities which course is better,bachelor of arts in journalism and mass communication,bachelor of arts in religious studies,bachelor of arts in english language and literature,bachelor of arts in behavioral science,ba in theatre arts,bachelor of arts bachelor of education,bachelor of humanities and social sciences,bachelor of arts in broadcast journalism,art class at home,12th arts course,bachelor of arts design,degree courses after 12th humanities,master of arts courses,bachelor of arts in film and television,bachelor of arts in accounting and finance,degree courses for humanities students,diploma for arts students,bachelor of arts and advanced studies,bachelor of arts and design,bachelor of arts in administration,bachelor of arts dance,bachelor of arts in game design,bachelor of arts aut,bachelor of arts bachelor of laws,bachelor dance,arts management certificate,ba theater arts,bachelor of arts in multimedia studies,artist class,humanities courses in university,after 12 humanities courses,humanities courses after 12,humanities list,bsc humanities,arts and humanities courses umbc,courses under humanities and social sciences,best course after plus two humanities,humanities and social sciences degree,humanities in social science,diploma in humanities,diploma courses for humanities students,ba honours humanities and social sciences du,after plus two courses for humanities students,bachelor of arts and humanities,best course after 12 humanities,bachelor of advanced humanities,course after 12 humanities,bachelor degree in humanities,courses for humanities students after 12th,after 12th humanities,humanities after 12th,courses after mba hr abroad,after 12th humanities courses list,humanities degree subjects,humanities courses in 11th,humanities and science courses,humanities and fine arts courses,ba in humanities with psychology,humanities and social sciences classes,ba in social science and humanities,humanities related courses,best courses after 12 humanities,ba hons humanities and social sciences in du,humanities class 12,diploma in hr after graduation,humanities students courses,course after plus two humanities,best courses after 12th for humanities students,ba arts and humanities,humanities high school class,humanities and social sciences studies,humanities university courses,ba humanities and social sciences du,best humanities classes to take,humanities courses for class 11,bu humanities courses,humanities courses in iit madras,courses for humanities students after 12,humanities diploma courses,bachelor of arts and social sciences,courses under arts and humanities,best course after humanities,best degree courses after 12th humanities,advanced humanities,bachelor of humanities abbreviation,courses after humanities in 12th,computer science and humanities,degree courses for humanities,ba honours in humanities and social science,list of humanities classes,humanities and computer science,ba social science and humanities,mba in humanities,college courses for humanities,humanities based degree courses,best schools for humanities class 11,ma in humanities and social sciences,bba after humanities,arts & humanities courses,ba honours humanities and social sciences,humanities undergraduate courses,degrees after 12th humanities,humanities and social sciences communication,ba hons humanities and social science,diploma in humanities and social sciences,diploma courses in humanities,ba humanities manipal,list of courses after 12th humanities,best job courses after 12th humanities,humanities and arts subjects,1 year courses after 12th humanities,courses after class 12 humanities,degree courses after plus two humanities,after plus 2 humanities,courses under faculty of arts and humanities,humanities associate's degree,humanities general education courses,humanities courses for medical school,humanities courses in abroad,humanities courses in high school,bachelor of humanities & social sciences,humanities major classes,courses under humanities department,after 12th humanities courses,humanities of social science,bachelor of arts humanities and social sciences,best courses for humanities,ba humanities courses,humanities and fine arts classes,arts and humanities course information,
+   
   
   " />
 
@@ -43,9 +44,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+            <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
             <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
             <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
             <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -94,7 +95,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bachelor-in-mass-communication.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/bachelor-in-mass-communication.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20"> Bachelor of Mass Communication (BMC)</label>
@@ -110,7 +111,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bachelor-of-physical-education.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/bachelor-of-physical-education.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Physical Education</label>
@@ -126,7 +127,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bachelor-of-social-work.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/bachelor-of-social-work.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Social Work (BSW)</label>
@@ -143,7 +144,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bachelor-of-archaelogy.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/bachelor-of-archaelogy.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor’s degree in Archaeology</label>
@@ -159,7 +160,7 @@
         </div>
         <div class="col-md-4" id="callback">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bachelor-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/bachelor-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Arts </label>
@@ -175,7 +176,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="course/bachelor-of-dance.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/bachelor-of-dance.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Arts in Dance or B.A</label>
@@ -209,7 +210,7 @@
   </div>
   <div class="col-md-4">
     <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-      <a href="course/master-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+      <a href="https://eduprov.com/course/master-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
         style="background-color: rgb(255, 255, 255)" data-abc="true">
         <div class="content">
           <label class="title fz-20">Master of Arts (MA)</label>
